add mongodb aggregate

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,7 +85,7 @@
             <tr>
               <td>POST</td>
               <td>/verify-email-otp</td>
-              <td>Verify email OTP (requires Bearer token and action)</td>
+              <td>Verify email OTP (requires Bearer token, otp and action)</td>
             </tr>
             <tr>
               <td>POST</td>
@@ -165,12 +165,12 @@
             <tr>
               <td>POST</td>
               <td>/private/space/create</td>
-              <td>Create a private space (requires Bearer token)</td>
+              <td>Create a private space (requires Bearer token and pin)</td>
             </tr>
             <tr>
               <td>POST</td>
               <td>/private/space/login</td>
-              <td>Login to a private space (requires Bearer token)</td>
+              <td>Login to a private space (requires Bearer token and pin)</td>
             </tr>
             <tr>
               <td>POST</td>
